# conanOne

./: .gitignore  .vscode-test.js  .vscodeignore  LICENSE  README.md  flake.nix  package-lock.json  package.json  tsconfig.json
src/: extension.ts
src/test/suite/conan-project/: .gitignore  CMakeLists.txt  build.sh  conanfile.py
src/test/suite/conan-project/conan-env/.conan/profiles/: default  macos-armv8-clang16-dbg
src/test/suite/conan-project/src/: CMakeLists.txt  main.cc
src/test/suite/conan-project/src/bar/: CMakeLists.txt  bar.cc  bar.hh
